KSENROLL-14446: Fixing spacing for Removed message in the add to cart area.
git-svn-id: https://svn.kuali.org/repos/student/enrollment/ks-enroll/trunk@74410 0ac02d80-fb3f-11dc-a574-c57244a850eb

--- a/ks-enroll-ui/src/main/angular/registration/app/styles/less/util/alert.less
+++ b/ks-enroll-ui/src/main/angular/registration/app/styles/less/util/alert.less
@@ -143,7 +143,7 @@
 
 @media screen and (min-width: @largeFormatMin) {
   .util-Alert {
-      margin: 0.5rem 0 0.5rem 0;
+      margin: 0.1rem 0 0.5rem 0;
   }
 
   .util-Alert--card--dropped {
